add email and street for api controller and database
